<resources>
    <string name="tituloPreferenciasRegistro">Datos del usuario</string>
    <string name="titleListPreference">Elija su apuesta por defecto</string>
    <string name="conectado">Conectado</string>
    <string name="app_name">PracticaObligatoriaDISPMOV_T2</string>
    <string name="apuestasTtle">Apuestas on-line</string>
    <string name="registro">Registro</string>
    <string name="apuestas">Apuestas</string>
    <string name="ajustes">Ajustes</string>
    <string name="resultado">Resultado</string>
    <string name="nombre">Nombre</string>
    <string name="mail">E-mail</string>
    <string name="fecha">Fecha Nacimiento (dd/mm/aaaa)</string>
    <string name="validar">Validar</string>
    <string name="volver">Volver</string>
    <string name="toastFaltanDatos">Debe completar todos los datos para registrarse</string>
    <string name="registroCompletado">Quedas registrado</string>
    <string name="menorDeEdad">Un menor no puede registrarse en esta aplicacion</string>
    <string name="registroNoCompletado">Usted no se ha registrado</string>
    <string name="datosRegistro">Datos del registro:</string>
    <string name="fNac">Fecha de nacimiento:</string>
    <string name="apuestasTitle">Apuestas</string>
    <string name="futbol">Futbol</string>
    <string name="tenis">Tenis</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="balonmano">Balonmano</string>
    <string name="aceptar">Aceptar</string>
    <string name="apuestaGuardada">Apuesta guardada</string>
    <string name="apuestaNoSeleccionada">No has seleccionado ninguna apuesta</string>
    <string name="masDeUnaApuesta">La versión Lite sólo admite un tipo de apuesta. Compra nuestra versión de Pago</string>
    <string name="apuestaSeleccionada">Has seleccionado hacer apuestas sobre:</string>
    <string name="dinero">DINERO</string>
    <string name="combinacion">COMBINACION</string>
    <string name="dineroApostar">Dinero a apostar</string>
    <string name="guardar">Guardar</string>
    <string name="noRegistrado">Error no puedes apostar si no te has registrado</string>
    <string name="noApostado">Error no puedes realizar ajustes si no has seleccionado el tipo de apuesta</string>
    <string name="num1">Numero1</string>
    <string name="num2">Numero2</string>
    <string name="noSpinnerSelected">Elige tu apuesta</string>
    <string name="numNoValido">Error, cada combinacion debe ser entre 0 y 300</string>
    <string name="numNoIntroducido">Elige tu combinacion ganadora</string>
    <string name="acercaDeTitle">Acerca de</string>
    <string name="ayudaTitle">Ayuda</string>
    <string name="autor">Autor: Juan Javier Simón Lucas</string>
    <string name="nomPractica">PR UD2 INTERFAZ DE USUARIO</string>
    <string name="anyo">2017</string>
    <string name="ayudaTxt">El funcionamiento de la aplicación es el siguiente: \n\n
Primero debes registrarte para ellos debes introducir tu nombre, e-mail, correo electrónico y fecha de nacimiento. Una vez introducidos todos los datos pulsando el botón validar, si todo es correcto la aplicación te devolverá a la pantalla principal automáticamente, mostrando un mensaje de confirmación de los datos.\n\n
IMPORTANTE: Para poder registrarte en esta aplicación debes ser mayor de edad, si no eres mayor de edad puedes pulsar el botón volver para ir la pantalla principal, si no rellenas alguno de los campos no podrás registrarte y al pulsar el botón validar te indicará el error.\n\n
Una vez te has registrado lo siguiente que debes hacer es indicar el tipo de apuesta que quieres hacer, es muy fácil solo debes marcar la casilla para el tipo de apuesta que quieras. Una vez seleccionada la opción que mas te interese pulsa el botón aceptar y  automáticamente te devolverá a la pantalla principal, si estas indeciso y prefieres pensártelo antes de marcar una opción puedes pulsar el botón volver para regresar a la pantalla principal.\n\n
Ya que esta versión es gratuita solo permite un tipo de apuesta prueba nuestra versión de pago para activar múltiples tipos de apuesta.\n\n
Ya estamos terminando ahora debes elegir tu combinación ganadora cuanto quieres apostar y ¿Cuál será el resultado que te haga millonario? Pulsa el botón ajustes para configurar la cantidad de dinero que quieres apostar y cual crees que será el resultado del partido. Para ello debes desplazarte por las distintas pestañas de esta pantalla y seleccionar una cantidad de dinero e indicar el resultado para el partido, una vez introducidos los datos no te olvides de guardar tu apuesta pulsando el botón guardara. Si estás indeciso siempre puedes pulsar el botón volver y regresar a la pestaña principal.
</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
