<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="registro"
        android:title="@string/tituloPreferenciasRegistro">

        <EditTextPreference
            android:key="nombrePref"
            android:title="@string/nombre"
            android:defaultValue=" "
            android:singleLine="true"/>

        <EditTextPreference
            android:key="mailPref"
            android:title="@string/mail"
            android:defaultValue=" "
            android:singleLine="true"/>

        <CheckBoxPreference
            android:key="conectado"
            android:title="@string/conectado"
            android:defaultValue="true"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:key="apuesta"
        android:title="@string/resultado">

        <ListPreference
            android:key="apuestaDefecto"
            android:title="@string/titleListPreference"
            android:entries="@array/entradas"
            android:entryValues="@array/valores" />

    </PreferenceCategory>
</PreferenceScreen>