<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jj.practicaobligatoriadispmov_t2.MainActivity">

    <TextView
        android:id="@+id/apuestasTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/apuestasTtle"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registroBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirRegistro"
        android:text="@string/registro" />

    <Button
        android:id="@+id/apuestasBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirApuestas"
        android:text="@string/apuestas" />

    <Button
        android:id="@+id/ajustesBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="abrirAjustes"
        android:text="@string/ajustes" />

    <Button
        android:id="@+id/sorteoBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorteo"/>

</LinearLayout>
