<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jj.practicaobligatoriadispmov_t2.Ajustes">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tabDinero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center_horizontal"
                            android:text="@string/dineroApostar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/spinnerDinero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <Button
                            android:id="@+id/guardarBoton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/guardar"
                            app:layout_constraintEnd_toStartOf="@+id/guideline4"
                            app:layout_constraintTop_toBottomOf="@+id/spinnerDinero"
                            android:onClick="guardarAjustes"/>

                        <Button
                            android:id="@+id/volverBoton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/volver"
                            app:layout_constraintBaseline_toBaselineOf="@+id/guardarBoton"
                            app:layout_constraintStart_toEndOf="@+id/guardarBoton"
                            android:onClick="volverAjustes"/>

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_begin="192dp" />

                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tabCombinacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/partido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/numero1"
                            android:layout_width="82dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:inputType="number"
                            android:text="@string/num1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/partido"
                            android:layout_marginLeft="8dp" />

                        <EditText
                            android:id="@+id/numero2"
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:ems="10"
                            android:inputType="number"
                            android:text="@string/num2"
                            app:layout_constraintBaseline_toBaselineOf="@+id/numero1"
                            app:layout_constraintStart_toEndOf="@+id/numero1"
                            android:layout_marginLeft="8dp" />

                        <Button
                            android:id="@+id/guardatBT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="32dp"
                            android:onClick="guardarAjustes"
                            android:text="@string/guardar"
                            app:layout_constraintEnd_toStartOf="@+id/guideline5"
                            app:layout_constraintTop_toBottomOf="@+id/numero1"
                            android:layout_marginRight="8dp" />

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.5" />

                        <Button
                            android:id="@+id/volvetBT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/volver"
                            app:layout_constraintBaseline_toBaselineOf="@+id/guardatBT"
                            app:layout_constraintStart_toStartOf="@+id/guideline5"
                            android:layout_marginLeft="8dp"
                            android:onClick="volverAjustes"/>
                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
